src/test/deca/syntax/invalid/liste_delvar_comma.deca
// Description:
//    comma manquante;
//
// Resultats:
//    Erreur syntaxique
//
// Historique:
//    cree le 11/01/2023

{
    int x,y
}
